--- a/index.css
+++ b/index.css
@@ -1,3 +1,18 @@
+@font-face{
+  font-family: roboto;
+  src: url(robot.ttf);
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+body{
+  font-family: roboto; monospace;
+  background: #232323;
+  margin: 0;
+}
+
 nav {
   background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1));
   opacity: 0.3;
